# free-graphs

./: .gitignore  LICENSE  README.md  free-graphs.cabal
Data/Graph/: Cofree.hs  Free.hs  Internal.hs
