name:                free-graphs
version:             0.1.0.0
synopsis:            Generate GraphViz graphs by interpretting free monads.
license:             MIT
license-file:        LICENSE
author:              Brian McKenna
maintainer:          brian@brianmckenna.org
copyright:           Brian McKenna
category:            Graphics
build-type:          Simple
cabal-version:       >=1.10

library
  ghc-options:         -Wall -Werror -O3
  exposed-modules:     Data.Graph.Free
                     , Data.Graph.Cofree
  build-depends:       base >=4.6
                     , graphviz >= 2999.16
                     , fgl >= 5.4
                     , free >= 4.5
                     , mtl
  default-language:    Haskell2010
